7166687: InetAddress.getLocalHost().getHostName() returns FQDN

Reviewed-by: chegar